force-app/main/default/objects/Account/fields/Active_Client__c.field-meta.xml
<CustomField>
    <fullName>Active_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Client</label>
    <type>Checkbox</type>
</CustomField>