force-app/main/default/objects/Account/fields/ClickUp_Space_Id__c.field-meta.xml
<CustomField>
    <fullName>ClickUp_Space_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ClickUp Space Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>