force-app/main/default/objects/Account/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contractor)</relationshipLabel>
    <relationshipName>Contracted_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>