force-app/main/default/objects/Account/fields/Contractor_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>