force-app/main/default/objects/Account/fields/Contractor_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Country_Code__c</fullName>
    <formula>TEXT(Contractor_Bank_Account__r.Bank__r.Account__r.Billing_Country_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor Country Code</label>
    <type>Text</type>
</CustomField>