force-app/main/default/objects/Account/fields/Contractor_Need_Formatted_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Need_Formatted_Invoice_Number__c</fullName>
    <formula>Contractor_Bank_Account__r.Bank__r.Account__r.Needs_Formatted_Invoice_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor Need Formatted Invoice Number</label>
    <type>Checkbox</type>
</CustomField>