force-app/main/default/objects/Account/fields/Contractor_Office__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Office__c</fullName>
    <label>Contractor Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>BY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>