force-app/main/default/objects/Account/fields/Default_BYN_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_BYN_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default BYN Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bank_Account__c.Bank__r.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Default BYN Accounts</relationshipLabel>
    <relationshipName>Default_BYN_Accounts_del</relationshipName>
    <type>Lookup</type>
</CustomField>