force-app/main/default/objects/Account/fields/Default_PLN_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_PLN_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default PLN Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bank_Account__c.Bank__r.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Default PLN Accounts</relationshipLabel>
    <relationshipName>Default_PLN_Accounts_del1</relationshipName>
    <type>Lookup</type>
</CustomField>