force-app/main/default/objects/Account/fields/lleads__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>lleads__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts Where Primary</relationshipLabel>
    <relationshipName>Accounts_Where_Primary</relationshipName>
    <type>Lookup</type>
</CustomField>