force-app/main/default/objects/Account/fields/Monthly_Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Report_ID__c</fullName>
    <label>Monthly Report ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>