force-app/main/default/objects/Account/fields/Needs_Formatted_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Needs_Formatted_Invoice_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Formatted Invoice Number</label>
    <type>Checkbox</type>
</CustomField>