force-app/main/default/objects/Account/fields/rh2__Describe__c.field-meta.xml
<CustomField>
    <fullName>rh2__Describe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Describe</label>
    <referenceTo>rh2__PS_Describe__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>