force-app/main/default/objects/Account/fields/Taxation__c.field-meta.xml
<CustomField>
    <fullName>Taxation__c</fullName>
    <label>Taxation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poland Spolka</fullName>
            </value>
            <value>
                <fullName>Poland IB</fullName>
            </value>
            <value>
                <fullName>Belarus Company</fullName>
            </value>
            <value>
                <fullName>Belarus IB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>