force-app/main/default/objects/Account/fields/Total_Loans__c.field-meta.xml
<CustomField>
    <fullName>Total_Loans__c</fullName>
    <label>Total Loans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>