force-app/main/default/objects/Account/fields/Total_Returns__c.field-meta.xml
<CustomField>
    <fullName>Total_Returns__c</fullName>
    <label>Total Returns</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>