force-app/main/default/objects/Account/fields/zisf__ZoomInfo_Industry__c.field-meta.xml
<CustomField>
    <fullName>zisf__ZoomInfo_Industry__c</fullName>
    <description>The Salesforce standard Industry field is only 40 characters in length. As ZoomInfo industries are sometimes longer than this, the ZoomInfo Industry field can hold up to 255 characters.</description>
    <label>ZoomInfo Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>