force-app/main/default/objects/Account/recordTypes/Client.recordType-meta.xml
<RecordType>
    <fullName>Client</fullName>
    <active>true</active>
    <description>Client account</description>
    <label>Client</label>
</RecordType>