force-app/main/default/objects/Account/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <description>Used only for Propeller Plan account records</description>
    <label>Internal</label>
</RecordType>