force-app/main/default/objects/Account/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Billing_Contact__c</columns>
    <columns>Contractor__c</columns>
    <columns>Contractor_Bank_Account__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Client__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Client</value>
    </filters>
    <label>All Active Clients</label>
</ListView>