force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Legal_Name__c</columns>
    <columns>Billing_Contact__c</columns>
    <columns>Contractor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>